[tool.poetry]
name = "loader"
version = "0.1.0"
description = ""
authors = ["Raynor <jonggu.woo@fitpet.co.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^25.1.0"
locust = "^2.34.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
